--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
-# If you used the Theme Picker and it shows a named theme like "Cayman", use remote_theme:
 title: "Alvin Natividad – Portfolio"
 description: "Digital Cartographer · GIS & Remote Sensing · QGIS/PyQt"
-remote_theme: pages-themes/cayman@v0.2.0   # change to your actual theme if different
-plugins:
-  - jekyll-remote-theme
+theme: jekyll-theme-cayman   # or jekyll-theme-minimal, etc.
+show_downloads: false
